Disconnect and connect hair does not work anymore as expected. #43394

Closed
opened 2015-01-24 01:10:59 +01:00 by Germano Cavalcante · 12 comments

System Information
Windows 8.1 64 bits

Blender Version
Broken: Blender 2.7.3
Worked: Blender 2.7.1
*I know that the version is still testing but I thought better notify immediately.

Exact steps for others to reproduce the error
Edit hair - disconnet and connect. You will see that the hair gets very messy.
hair_bug.blend

**System Information** Windows 8.1 64 bits **Blender Version** Broken: Blender 2.7.3 Worked: Blender 2.7.1 *I know that the version is still testing but I thought better notify immediately. **Exact steps for others to reproduce the error** Edit hair - disconnet and connect. You will see that the hair gets very messy. [hair_bug.blend](https://archive.blender.org/developer/F139039/hair_bug.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Lukas Tönne was assigned by Germano Cavalcante 2015-01-24 01:27:47 +01:00

Added subscriber: @zeauro

Added subscriber: @zeauro

I confirm the bug under Ubuntu 14.04 64 bits for master hash 3121941. But here, no bug, it works fine for 2.73a.

I confirm the bug under Ubuntu 14.04 64 bits for master hash 3121941. But here, no bug, it works fine for 2.73a.

This issue was referenced by 6f2034cead

This issue was referenced by 6f2034ceadf95570bc0cdea78a14231357cc0972
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 6f2034cead.

Closed by commit 6f2034cead.
Author
Member

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author
Member

Thank you for your attention lukastoenne. But despite the commits solve many cases, it still has problems in others. As in the following attached template:
hair_bug_3.blend

Thank you for your attention lukastoenne. But despite the commits solve many cases, it still has problems in others. As in the following attached template: [hair_bug_3.blend](https://archive.blender.org/developer/F139619/hair_bug_3.blend)
Member

Ok, should be fixed now.

Ok, should be fixed now.
Author
Member

Woow!!! That was fast.

Woow!!! That was fast.
Author
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43394
No description provided.